Lua/Android-LOVE/love/build/intermediates/cxx/Release/6h5345s3/logs/arm64-v8a/build_stderr_targets.txt
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_ParticleSystem.cpp:68:6: error: use of dynamic_cast requires -frtti
        if (dynamic_cast<Image *>(tex) != nullptr)
            ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_ParticleSystem.cpp:70:11: error: use of dynamic_cast requires -frtti
        else if (dynamic_cast<Canvas *>(tex) != nullptr)
                 ^
2 errors generated.
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_Mesh.cpp:512:6: error: use of dynamic_cast requires -frtti
        if (dynamic_cast<Image *>(tex) != nullptr)
            ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_Mesh.cpp:514:11: error: use of dynamic_cast requires -frtti
        else if (dynamic_cast<Canvas *>(tex) != nullptr)
                 ^
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_ParticleSystem.o] Error 1
make: *** Waiting for unfinished jobs....
2 errors generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_Mesh.o] Error 1
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/Image.cpp:117:31: error: use of dynamic_cast requires -frtti
        love::image::ImageData *id = dynamic_cast<love::image::ImageData *>(d);
                                     ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_SpriteBatch.cpp:159:6: error: use of dynamic_cast requires -frtti
        if (dynamic_cast<Image *>(tex) != nullptr)
            ^
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_SpriteBatch.cpp:161:11: error: use of dynamic_cast requires -frtti
        else if (dynamic_cast<Canvas *>(tex) != nullptr)
                 ^
2 errors generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_SpriteBatch.o] Error 1
1 error generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/Image.o] Error 1
C:/Users/makpu/Downloads/proj/Projects/Lua/Android-LOVE/love/src/jni/love/src/modules/graphics/wrap_Graphics.cpp:683:12: error: use of dynamic_cast requires -frtti
        auto fd = dynamic_cast<love::filesystem::FileData *>(d);
                  ^
1 error generated.
make: *** [C:/Users/makpu/AppData/Local/Android/Sdk/ndk/23.2.8568313/build//../build/core/build-binary.mk:478: C:\Users\makpu\Downloads\proj\Projects\Lua\Android-LOVE\love\build\intermediates\cxx\Release\6h5345s3/obj/local/arm64-v8a/objs/love/src/modules/graphics/wrap_Graphics.o] Error 1
